--- a/06/index.html
+++ b/06/index.html
@@ -22,13 +22,13 @@
 </div>
 <div class="top-milled cf">
     <ul class="list cf">
-        <li>Home</li>
-        <li>Blog</li>
-        <li>Shop</li>
-        <li>Services</li>
-        <li class="li-color">Portfolio</li>
-        <li>About us</li>
-        <li>Contact us</li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#">Services</a></li>
+        <li class="li-color"><a href="#">Portfolio</a></li>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Contact us</a></li>
     </ul>
    <div class="right">
        <input type="button" value="Join us" id="ju">
@@ -38,13 +38,13 @@
 <div class="fort-box">
     <div class="top-fort">
         <ul class="anv cf">
-            <li>Technology <span>|</span></li>
-            <li>Education <span>|</span></li>
-            <li>Business <span>|</span></li>
-            <li>Entertainment <span>|</span></li>
-            <li>Middle East <span>|</span></li>
-            <li>World Sport <span>|</span></li>
-            <li>Environment <span>|</span></li>
+            <li><a href="#">Technology <span>|</span></a></li>
+            <li><a href="#">Education <span>|</span></a></li>
+            <li><a href="#">Business <span>|</span></a></li>
+            <li><a href="#">Entertainment <span>|</span></a></li>
+            <li><a href="#">Middle East <span>|</span></a></li>
+            <li><a href="#">World Sport <span>|</span></a></li>
+            <li><a href="#">Environment <span>|</span></a></li>
         </ul>
     </div>
 </div>
@@ -98,19 +98,20 @@
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
+                <li class="five"><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
+                <li class="five"><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li class="five"><a href="#"></a></li>
+
             </ul>
         </div>
         <div class="middle-right-c">
@@ -137,60 +138,53 @@
                 <li><a href="#">Comments</a><span>|</span></li>
             </ul>
             <div class="middle-right-box cf">
-                <div class="middle-right-box1"><img src="images/usd.jpg" alt=""></div>
-                <div class="middle-right-box2">
-                    <p><a href="#">How to budget for living
-                        <br>
-                        abroad</a></p>
-                    <p><a href="#">Posted on <span>7 April, 2013
+               <div class="middle-right-box-all"> <div class="middle-right-box1"><img src="images/usd.jpg" alt=""></div>
+                   <div class="middle-right-box2">
+                       <p><a href="#">How to budget for living
+                           <br>
+                           abroad</a></p>
+                       <p><a href="#">Posted on <span>7 April, 2013
                     <br>
                     </span> By <span>M-elgendy</span></a></p>
-                </div>
-            </div>
-            <div class="middle-right-box cf">
-                <div class="middle-right-box1"><img src="images/u0.jpg" alt=""></div>
-                <div class="middle-right-box2">
-                    <p><a href="#">How to budget for living
-                        <br>
-                        abroad</a></p>
-                    <p><a href="#">Posted on <span>7 April, 2013
+                   </div></div>
+               <div class="middle-right-box-all"> <div class="middle-right-box1"><img src="images/usd.jpg" alt=""></div>
+                   <div class="middle-right-box2">
+                       <p><a href="#">How to budget for living
+                           <br>
+                           abroad</a></p>
+                       <p><a href="#">Posted on <span>7 April, 2013
                     <br>
                     </span> By <span>M-elgendy</span></a></p>
-                </div>
-            </div>
-            <div class="middle-right-box cf">
-                <div class="middle-right-box1"><img src="images/u=2ss.jpg" alt=""></div>
-                <div class="middle-right-box2">
-                    <p><a href="#">How to budget for living
-                        <br>
-                        abroad</a></p>
-                    <p><a href="#">Posted on <span>7 April, 2013
+                   </div></div>
+               <div class="middle-right-box-all"> <div class="middle-right-box1"><img src="images/usd.jpg" alt=""></div>
+                   <div class="middle-right-box2">
+                       <p><a href="#">How to budget for living
+                           <br>
+                           abroad</a></p>
+                       <p><a href="#">Posted on <span>7 April, 2013
                     <br>
                     </span> By <span>M-elgendy</span></a></p>
-                </div>
-            </div>
-            <div class="middle-right-box cf">
-                <div class="middle-right-box1"><img src="images/uf0.jpg" alt=""></div>
-                <div class="middle-right-box2">
-                    <p><a href="#">How to budget for living
-                        <br>
-                        abroad</a></p>
-                    <p><a href="#">Posted on <span>7 April, 2013
+                   </div></div>
+               <div class="middle-right-box-all"> <div class="middle-right-box1"><img src="images/usd.jpg" alt=""></div>
+                   <div class="middle-right-box2">
+                       <p><a href="#">How to budget for living
+                           <br>
+                           abroad</a></p>
+                       <p><a href="#">Posted on <span>7 April, 2013
                     <br>
                     </span> By <span>M-elgendy</span></a></p>
-                </div>
-            </div>
-            <div class="middle-right-box cf">
-                <div class="middle-right-box1"><img src="images/u0.jpg" alt=""></div>
-                <div class="middle-right-box2">
-                    <p><a href="#">How to budget for living
-                        <br>
-                        abroad</a></p>
-                    <p><a href="#">Posted on <span>7 April, 2013
+                   </div></div>
+               <div class="middle-right-box-all"> <div class="middle-right-box1"><img src="images/usd.jpg" alt=""></div>
+                   <div class="middle-right-box2">
+                       <p><a href="#">How to budget for living
+                           <br>
+                           abroad</a></p>
+                       <p><a href="#">Posted on <span>7 April, 2013
                     <br>
                     </span> By <span>M-elgendy</span></a></p>
-                </div>
+                   </div></div>
             </div>
+
         </div>
         <div class="middle-right-t">
             Tags
@@ -238,15 +232,15 @@
     <!----------------------------------------->
 <div class="footer-box"><div class="footer">
     <div class="container">
-        <div class="left">
-            <h2>About Company</h2>
+
             <div class="text">
+                <div class="left"><h2>About Company</h2></div>
                 Nullam ut commodo velit.Quisque sit amet arcu nisi.Sed id massa
                 et mauris lacinia condimentum.In luctus suscipit laoreet. Suspendisse
                 a arcu quis neque tincidunt posuere sagittis ac lacus.Aenean tristique accumsan
                 ipsum vitae molestie.Etiam vulputate.
             </div>
-        </div>
+
         <ul class="cf">
             <li>
                 <h2>Support</h2>
