--- a/07/index.html
+++ b/07/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../06/css/style.css">
 </head>
 <body>
 <!--头部-->
 <div class="top-up cf">
     <div class="log">
-        <img src="images/01_portfolio_1-Column_03.png" alt="">
+        <img src="../06/images/01_portfolio_1-Column_03.png" alt="">
     </div>
     <div class="tex">
         Creative Html template <br>
@@ -17,18 +17,18 @@
     </div>
     <div class="ss">
         <input type="text" id=text placeholder="Searc">
-        <div class="fd"><a href="#"><img src="images/01_img_03.png" alt=""></a></div>
+        <div class="fd"><a href="#"><img src="../06/images/01_img_03.png" alt=""></a></div>
     </div>
 </div>
 <div class="top-milled cf">
     <ul class="list cf">
-        <li>Home</li>
-        <li>Blog</li>
-        <li>Shop</li>
-        <li>Services</li>
-        <li class="li-color">Portfolio</li>
-        <li>About us</li>
-        <li>Contact us</li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#">Services</a></li>
+        <li class="li-color"><a href="#">Portfolio</a></li>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Contact us</a></li>
     </ul>
    <div class="right">
        <input type="button" value="Join us" id="ju">
@@ -38,13 +38,13 @@
 <div class="fort-box">
     <div class="top-fort">
         <ul class="anv cf">
-            <li>Technology <span>|</span></li>
-            <li>Education <span>|</span></li>
-            <li>Business <span>|</span></li>
-            <li>Entertainment <span>|</span></li>
-            <li>Middle East <span>|</span></li>
-            <li>World Sport <span>|</span></li>
-            <li>Environment <span>|</span></li>
+            <li><a href="#">Technology <span>|</span></a></li>
+            <li><a href="#">Education <span>|</span></a></li>
+            <li><a href="#">Business <span>|</span></a></li>
+            <li><a href="#">Entertainment <span>|</span></a></li>
+            <li><a href="#">Middle East <span>|</span></a></li>
+            <li><a href="#">World Sport <span>|</span></a></li>
+            <li><a href="#">Environment <span>|</span></a></li>
         </ul>
     </div>
 </div>
@@ -57,49 +57,49 @@
         </div>
         <div class="left-list cf">
             <dl class="left-list-box">
-                <dd><img src="images/20140819083452302.jpg" alt=""></dd>
+                <dd><img src="../06/images/fji.jpg" alt=""></dd>
                 <dt class="left-list-dt1">Wesley Snipes Freed From Jail After Tax Evasion.</dt>
                 <dt class="left-list-dt2"><a href="#">Posted on <span>7 April, 2013
                     </span> By <span>M-elgendy</span></a></dt>
             </dl>
             <dl class="left-list-box">
-                <dd><img src="images/e.jpg" alt=""></dd>
+                <dd><img src="../06/images/fsdsss.jpg" alt=""></dd>
                 <dt class="left-list-dt1">Wesley Snipes Freed From Jail After Tax Evasion.</dt>
                 <dt class="left-list-dt2"><a href="#">Posted on <span>7 April, 2013
                     </span> By <span>M-elgendy</span></a></dt>
             </dl>
             <dl class="left-list-box">
-                <dd><img src="images/e.jpg" alt=""></dd>
+                <dd><img src="../06/images/fff.jpg" alt=""></dd>
                 <dt class="left-list-dt1">Wesley Snipes Freed From Jail After Tax Evasion.</dt>
                 <dt class="left-list-dt2"><a href="#">Posted on <span>7 April, 2013
                     </span> By <span>M-elgendy</span></a></dt>
             </dl>
             <dl class="left-list-box">
-                <dd><img src="images/e.jpg" alt=""></dd>
+                <dd><img src="../06/images/fff.jpg" alt=""></dd>
                 <dt class="left-list-dt1">Wesley Snipes Freed From Jail After Tax Evasion.</dt>
                 <dt class="left-list-dt2"><a href="#">Posted on <span>7 April, 2013
                     </span> By <span>M-elgendy</span></a></dt>
             </dl>
             <dl class="left-list-box">
-                <dd><img src="images/e.jpg" alt=""></dd>
+                <dd><img src="../06/images/fsadsadsa.jpg" alt=""></dd>
                 <dt class="left-list-dt1">Wesley Snipes Freed From Jail After Tax Evasion.</dt>
                 <dt class="left-list-dt2"><a href="#">Posted on <span>7 April, 2013
                     </span> By <span>M-elgendy</span></a></dt>
             </dl>
             <dl class="left-list-box">
-                <dd><img src="images/e.jpg" alt=""></dd>
+                <dd><img src="../06/images/fsdsss.jpg" alt=""></dd>
                 <dt class="left-list-dt1">Wesley Snipes Freed From Jail After Tax Evasion.</dt>
                 <dt class="left-list-dt2"><a href="#">Posted on <span>7 April, 2013
                     </span> By <span>M-elgendy</span></a></dt>
             </dl>
             <dl class="left-list-box">
-                <dd><img src="images/e.jpg" alt=""></dd>
+                <dd><img src="../06/images/fji.jpg" alt=""></dd>
                 <dt class="left-list-dt1">Wesley Snipes Freed From Jail After Tax Evasion.</dt>
                 <dt class="left-list-dt2"><a href="#">Posted on <span>7 April, 2013
                     </span> By <span>M-elgendy</span></a></dt>
             </dl>
             <dl class="left-list-box">
-                <dd><img src="images/e.jpg" alt=""></dd>
+                <dd><img src="../06/images/usdddd0.jpg" alt=""></dd>
                 <dt class="left-list-dt1">Wesley Snipes Freed From Jail After Tax Evasion.</dt>
                 <dt class="left-list-dt2"><a href="#">Posted on <span>7 April, 2013
                     </span> By <span>M-elgendy</span></a></dt>
@@ -120,19 +120,18 @@
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
+                <li class="five"><a href="#"></a></li>  <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
+                <li class="five"><a href="#"></a></li>  <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li class="five"><a href="#"></a></li>
+
             </ul>
         </div>
         <div class="middle-right-c">
@@ -151,7 +150,7 @@
         <div class="middle-right-a">
             Advertising
         </div>
-        <div class="middle-right-img"><img src="images/usdddd0.jpg" alt=""></div>
+        <div class="middle-right-img"><img src="../06/images/usdddd0.jpg" alt=""></div>
         <div class="middle-right-list cf">
             <ul class="middle-right-list-ul cf">
                 <li><a href="#">Popular</a><span>|</span></li>
@@ -159,59 +158,51 @@
                 <li><a href="#">Comments</a><span>|</span></li>
             </ul>
             <div class="middle-right-box cf">
-                <div class="middle-right-box1"><img src="images/usdddd0.jpg" alt=""></div>
-                <div class="middle-right-box2">
-                    <p><a href="#">How to budget for living
-                        <br>
-                        abroad</a></p>
-                    <p><a href="#">Posted on <span>7 April, 2013
+                <div class="middle-right-box-all"> <div class="middle-right-box1"><img src="../06/images/u=1436689098,516734218&fm=21&gp=0.jpg" alt=""></div>
+                    <div class="middle-right-box2">
+                        <p><a href="#">How to budget for living
+                            <br>
+                            abroad</a></p>
+                        <p><a href="#">Posted on <span>7 April, 2013
                     <br>
                     </span> By <span>M-elgendy</span></a></p>
-                </div>
-            </div>
-            <div class="middle-right-box cf">
-                <div class="middle-right-box1"><img src="images/uf0.jpg" alt=""></div>
-                <div class="middle-right-box2">
-                    <p><a href="#">How to budget for living
-                        <br>
-                        abroad</a></p>
-                    <p><a href="#">Posted on <span>7 April, 2013
+                    </div></div>
+                <div class="middle-right-box-all"> <div class="middle-right-box1"><img src="../06/images/u=1436689098,516734218&fm=21&gp=0.jpg" alt=""></div>
+                    <div class="middle-right-box2">
+                        <p><a href="#">How to budget for living
+                            <br>
+                            abroad</a></p>
+                        <p><a href="#">Posted on <span>7 April, 2013
                     <br>
                     </span> By <span>M-elgendy</span></a></p>
-                </div>
-            </div>
-            <div class="middle-right-box cf">
-                <div class="middle-right-box1"><img src="images/u0.jpg" alt=""></div>
-                <div class="middle-right-box2">
-                    <p><a href="#">How to budget for living
-                        <br>
-                        abroad</a></p>
-                    <p><a href="#">Posted on <span>7 April, 2013
+                    </div></div>
+                <div class="middle-right-box-all"> <div class="middle-right-box1"><img src="../06/images/u=1436689098,516734218&fm=21&gp=0.jpg" alt=""></div>
+                    <div class="middle-right-box2">
+                        <p><a href="#">How to budget for living
+                            <br>
+                            abroad</a></p>
+                        <p><a href="#">Posted on <span>7 April, 2013
                     <br>
                     </span> By <span>M-elgendy</span></a></p>
-                </div>
-            </div>
-            <div class="middle-right-box cf">
-                <div class="middle-right-box1"><img src="images/usd.jpg" alt=""></div>
-                <div class="middle-right-box2">
-                    <p><a href="#">How to budget for living
-                        <br>
-                        abroad</a></p>
-                    <p><a href="#">Posted on <span>7 April, 2013
+                    </div></div>
+                <div class="middle-right-box-all"> <div class="middle-right-box1"><img src="../06/images/u=1436689098,516734218&fm=21&gp=0.jpg" alt=""></div>
+                    <div class="middle-right-box2">
+                        <p><a href="#">How to budget for living
+                            <br>
+                            abroad</a></p>
+                        <p><a href="#">Posted on <span>7 April, 2013
                     <br>
                     </span> By <span>M-elgendy</span></a></p>
-                </div>
-            </div>
-            <div class="middle-right-box cf">
-                <div class="middle-right-box1"><img src="images/u=2ss.jpg" alt=""></div>
-                <div class="middle-right-box2">
-                    <p><a href="#">How to budget for living
-                        <br>
-                        abroad</a></p>
-                    <p><a href="#">Posted on <span>7 April, 2013
+                    </div></div>
+                <div class="middle-right-box-all"> <div class="middle-right-box1"><img src="../06/images/u=1436689098,516734218&fm=21&gp=0.jpg" alt=""></div>
+                    <div class="middle-right-box2">
+                        <p><a href="#">How to budget for living
+                            <br>
+                            abroad</a></p>
+                        <p><a href="#">Posted on <span>7 April, 2013
                     <br>
                     </span> By <span>M-elgendy</span></a></p>
-                </div>
+                    </div></div>
             </div>
         </div>
         <div class="middle-right-t">
@@ -237,7 +228,7 @@
         <div class="middle-right-vid">
             <p>Featured Video</p>
             <div class="middle-right-v">
-                <img src="images/06_Column_03.png" alt="">
+                <img src="../06/images/06_Column_03.png" alt="">
             </div>
         </div>
         <!---------------------------------------->
@@ -260,14 +251,14 @@
     <!----------------------------------------->
 <div class="footer-box"><div class="footer">
     <div class="container">
-        <div class="left">
-            <h2>About Company</h2>
+
             <div class="text">
+                <div class="left"><h2>About Company</h2></div>
                 Nullam ut commodo velit.Quisque sit amet arcu nisi.Sed id massa
                 et mauris lacinia condimentum.In luctus suscipit laoreet. Suspendisse
                 a arcu quis neque tincidunt posuere sagittis ac lacus.Aenean tristique accumsan
                 ipsum vitae molestie.Etiam vulputate.
-            </div>
+
         </div>
         <ul class="cf">
             <li>
@@ -295,7 +286,7 @@
 <div class="footer-foot">
     <div class="container">
         <p>© 2013 M-elgendy - All rights reserved.</p>
-        <img src="images/14_portfolio_1-Column_18.png">
+        <img src="../06/images/14_portfolio_1-Column_18.png">
     </div>
 </div>
 
